objects/Equipment_Delivery_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Equipment Delivery Tracking</relationshipLabel>
        <relationshipName>Equipment_Delivery_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier__c</fullName>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FedEx</fullName>
                </value>
                <value>
                    <fullName>USPS</fullName>
                </value>
                <value>
                    <fullName>DHL</fullName>
                </value>
                <value>
                    <fullName>UPS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Equipment Delivery Tracking</relationshipLabel>
        <relationshipName>Equipment_Delivery_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Equipment Delivery Tracking</label>
    <nameField>
        <label>Tracking Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipment Delivery Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>